--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,9 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Print Git info
+        run: |
+          echo "Running on branch: ${{ github.ref_name }}"
+          echo "Commit hash: ${{ github.sha }}"
+          echo "Triggered by: ${{ github.actor }}"
