--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Running tests...\" && exit 0"
+    "test": "echo \"Running tests...\" && exit 0",
+    "build": "echo \"No build step for backend\""
   },
   "repository": {
     "type": "git",
